# personal-finance-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
app/: __init__.py
app/analytics/: __init__.py  anomaly.py  calculator.py  forecast.py  types.py
app/auth/: __init__.py  jwt.py  middleware.py
app/core/: categories.py  config.py  exceptions.py
app/db/: base.py  session.py
app/db/repositories/: account_repository.py  audit_repository.py  transaction_repository.py  user_repository.py
app/mcp/: __init__.py  server.py
app/mcp/tools/: __init__.py  accounts.py  analysis.py  auth_tools.py  health.py  reports.py  status.py  transactions.py
app/models/: __init__.py  account.py  audit_log.py  transaction.py  user.py
app/reports/: __init__.py  pdf_generator.py  report_data.py  report_service.py
app/schemas/: __init__.py  account.py  analytics.py  transaction.py
app/services/: account_service.py  analytics_service.py  transaction_service.py
app/utils/: errors.py  logging.py
docs/: ARCHITECTURE.md  RUN_AND_TEST.md
infra/docker/: docker-compose.yml  entrypoint.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_seed_default_user.py  003_audit_logs.py
tests/: conftest.py
tests/unit/: test_config.py
tests/unit/analytics/: test_anomaly.py  test_calculator.py  test_forecast.py
tests/unit/schemas/: test_account_schema.py  test_transaction_schema.py
tests/unit/services/: test_account_service.py  test_analytics_service.py  test_delete.py  test_report_service.py  (+1 more)
(+2 files in other folders)
